<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/customToolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:fitsSystemWindows="true"
        android:background="?android:attr/colorPrimary"
        android:elevation="4dp">

        <ImageView
            android:id="@+id/menuIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:gravity="center_vertical"
            android:src="@drawable/menu"
            android:clickable="true"
            android:adjustViewBounds="true"
            android:maxWidth="36dp"
            android:maxHeight="36dp" />

        <TextView
            android:id="@+id/appName"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:paddingStart="16dp"
            android:gravity="center_vertical"
            android:layout_centerVertical="true"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="30sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/browseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/browse_path"
        android:layout_below="@id/customToolbar"
        android:layout_marginTop="16dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/customToolbar"
        android:layout_toEndOf="@id/browseButton"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/file_path_hint" />
    <Button
        android:id="@+id/launchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/launch"
        android:layout_below="@id/browseButton"
        android:layout_marginTop="16dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp" />

</RelativeLayout>